adding EventApproval page and link

--- a/EventsSandbox/EventsSandbox/EventsSandbox.csproj
+++ b/EventsSandbox/EventsSandbox/EventsSandbox.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
+    <Content Include="admin\EventApproval.aspx" />
     <Content Include="admin\UserManagement.aspx" />
     <Content Include="Connect\EventRoster.aspx" />
     <Content Include="Connect\MyEvents.aspx" />
@@ -108,6 +109,13 @@
     </Compile>
     <Compile Include="About.aspx.designer.cs">
       <DependentUpon>About.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="admin\EventApproval.aspx.cs">
+      <DependentUpon>EventApproval.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="admin\EventApproval.aspx.designer.cs">
+      <DependentUpon>EventApproval.aspx</DependentUpon>
     </Compile>
     <Compile Include="admin\UserManagement.aspx.cs">
       <DependentUpon>UserManagement.aspx</DependentUpon>
