Removed AuInterconnect.suo.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 au-interconnect/au-interconnect/bin
 au-interconnect/au-interconnect/obj
 au-interconnect/au-interconnect/AUInterconnect.csproj.user
+au-interconnect/AUInterconnect.suo
