User class modified to reflect current refactoring strategy for data access (see #1), also updating project file

--- a/au-interconnect/au-interconnect/AUInterconnect.csproj
+++ b/au-interconnect/au-interconnect/AUInterconnect.csproj
@@ -139,6 +139,7 @@
       <DependentUpon>MyEvents.aspx</DependentUpon>
     </Compile>
     <Compile Include="Const.cs" />
+    <Compile Include="DataUtil.cs" />
     <Compile Include="Event.cs" />
     <Compile Include="EventEntryCntrl.ascx.cs">
       <DependentUpon>EventEntryCntrl.ascx</DependentUpon>
