--- a/au-interconnect/au-interconnect/Web.config
+++ b/au-interconnect/au-interconnect/Web.config
@@ -16,6 +16,9 @@
     <add name="oitss1.auburn.edu"
          connectionString="Data Source=oitss1.auburn.edu;Initial Catalog=interconnect;User ID=interconnectUser;Password=UVM6f32Y"
          providerName="System.Data.SqlClient"/>
+    <add name="dev"
+         connectionString="Data Source=cjw39.no-ip.org;Initial Catalog=interconnect;User ID=interconnect;Password=interconnect"
+         providerName="System.Data.SqlClient"/>
   </connectionStrings>
 
   <system.web>
